[package]
name = "edclient"
version = "0.1.0"
authors = ["Frits Kuipers <frits.kuipers@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protocol = "3.1.3"
protocol-derive = "3.1.3"
edlib = { path = "../lib"}
