[package]
name = "edclient"
version = "0.1.0"
authors = ["Frits Kuipers <frits.kuipers@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.104"
serde_derive = "1.0.104"
bincode = "1.2.1"
edlib = { path = "../lib"}
